--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <ul class="navbar-nav mr-auto">
                 <li class="active nav-item mr-2"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item mr-2"><a class="nav-link" href="/about">About</a></li>
+                <li class="nav-item mr-2"><a class="nav-link" href="/login">Sign in / Sign Up</a></li>
             </ul>
+            <div class="d-none d-md-block">
+                <p class="navbar-text my-auto mr-2"><i>Great Whiskey delivered to your door!</i></p>
+                <a href="/login">Sign in / Sign up</a>
+            </div>
     </nav>
     <article class="container">
         <!-- Callout -->
